update teiid sample